# gallerica

./: Cargo.toml  README.md  test.toml
doc/adr/: 0001-record-architecture-decisions.md
src/: lib.rs  main.rs  message_api.rs  mqtt_listener.rs  timer.rs  unix_socket_listener.rs
