[package]
name = "gallerica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
tokio = { version = "1.17", features = ["full"] }
rumqttc = "*"
rand = "0.8.5"
serde = { version="1.0.136", features = ["derive"] }
toml = "0.5.8"
