[package]
name = "gallerica"
version = "0.1.0"
edition = "2021"
authors = ["texel <texelsensei@posteo.net>"]
description = "Tool for selecting random images out of a list of folders."
readme = "README.md"
license = "Unlicense"

default-run = "gallerica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
tokio = { version = "1.17", features = ["full"] }
rumqttc = "*"
rand = "0.8.5"
serde = { version="1.0.136", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.8"
clap = { version="3.1.18", features = ["derive"] }
directories = "4.0.1"
circular-queue = "0.2.6"

[dev-dependencies]
tokio = { version = "*", features = ["test-util"] }
